# HardQode_lms

./: Dockerfile  Makefile  Readme.md  db.sqlite3  pyproject.toml
conf/: settings.py  urls.py
lms/: admin.py  models.py  serializers.py  tests.py  views.py
lms/migrations/: 0001_initial.py
